# src/user/test.controller.ts
@@ -1,10 +1,0 @@
-import { Controller, Get, HttpCode, HttpStatus } from '@nestjs/common';
-
-@Controller('test')
-export class TestController {
-  @Get('me')
-  @HttpCode(HttpStatus.OK)
-  async getMe() {
-    return {};
-  }
-} 
